--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,16 +12,6 @@ input {
   font-family: inherit;
 }
 
-.empty-todo {
-  background-color: #eeeeee;
-  border-bottom: 2px solid black;
-  display: inline-block;
-  height: 20px;
-  margin: 10px;
-  padding: 5px 10px;
-  width: 200px;
-}
-
 .page-container {
   font-family: 'Titillium Web', cursive;
 }
@@ -32,5 +22,5 @@ input {
   border-radius: 5px;
   display: inline-block;
   padding: 5px 10px;
-  height: 26px;
+  min-height: 26px;
 }
