--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,7 +13,7 @@ input {
 }
 
 .page-container {
-  font-family: 'Titillium Web', cursive;
+  font-family: 'Titillium Web', sans-serif;
 }
 
 .svg-container {
