--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,16 +4,15 @@ body {
   background-color: lightgray;
 }
 
-button {
-  font-family: inherit;
-}
-
 input {
   font-family: inherit;
+  font-size: inherit;
+  min-width: 20em;
 }
 
 .page-container {
   font-family: 'Titillium Web', sans-serif;
+  font-size: 0.8em;
 }
 
 .svg-container {
@@ -26,5 +25,5 @@ input {
   border-radius: 5px;
   display: inline-block;
   padding: 5px 10px;
-  min-height: 26px;
+  min-height: 1.6em;
 }
